# file-director

./: .gitignore  CMakeLists.txt
assets/: f_basic.glsl  f_grass.glsl  v_basic.glsl  v_default.glsl  v_grass.glsl  v_lambert.glsl
assets/shaders/: f_blinn_phong.glsl  f_default.glsl  f_default_text.glsl  f_grass.glsl  f_lambert.glsl  v_blinn_phong.glsl  v_default.glsl  v_default_text.glsl  v_grass.glsl  v_lambert.glsl  v_simplest.glsl
playground/assets/shaders/: f_default_text.glsl  f_grass.glsl  f_skybox.glsl  v_default.glsl  v_grass.glsl  v_simplest.glsl
playground/maze/3/: message.txt
src/: Shader.cpp  Shader.h  app.hpp  arena.hpp  camera.cpp  camera.h  defs.h  elements_buffer.cpp  elements_buffer.h  file.cpp  file.h  file.hpp  folder.hpp  font_renderer.cpp  font_renderer.h  grass.hpp  input_parser.hpp  main.cpp  mesh.cpp  mesh.h  skybox.cpp  skybox.h  stb.cpp  texture.cpp  texture.h  vertex.hpp  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
